--- a/Gestion Tipo Campo/src/gestiontipocampo/frameComandos.form
+++ b/Gestion Tipo Campo/src/gestiontipocampo/frameComandos.form
@@ -116,13 +116,8 @@
     </Component>
     <Component class="javax.swing.JComboBox" name="comboTipo">
       <Properties>
-        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="4">
-            <StringItem index="0" value="Item 1"/>
-            <StringItem index="1" value="Item 2"/>
-            <StringItem index="2" value="Item 3"/>
-            <StringItem index="3" value="Item 4"/>
-          </StringArray>
+        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+          <Connection code="new javax.swing.DefaultComboBoxModel(new String[] { &quot;Crear&quot;, &quot;Eliminar&quot;, &quot;Modificar&quot;, &quot;Otro&quot; })" type="code"/>
         </Property>
         <Property name="name" type="java.lang.String" value="comboTipo" noResource="true"/>
       </Properties>
@@ -457,13 +452,8 @@
             </Component>
             <Component class="javax.swing.JComboBox" name="comboSeleccionFormulario">
               <Properties>
-                <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="4">
-                    <StringItem index="0" value="Item 1"/>
-                    <StringItem index="1" value="Item 2"/>
-                    <StringItem index="2" value="Item 3"/>
-                    <StringItem index="3" value="Item 4"/>
-                  </StringArray>
+                <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+                  <Connection code="new javax.swing.DefaultComboBoxModel(new String[] { &quot; &quot; })" type="code"/>
                 </Property>
                 <Property name="name" type="java.lang.String" value="comboSeleccionFormulario" noResource="true"/>
               </Properties>
