--- a/Gestion Tipo Campo/src/gestiontipocampo/frameComandos.form
+++ b/Gestion Tipo Campo/src/gestiontipocampo/frameComandos.form
@@ -475,6 +475,9 @@
         <Property name="text" type="java.lang.String" resourceKey="botonCancelar.text"/>
         <Property name="name" type="java.lang.String" value="botonCancelar" noResource="true"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botonCancelarActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="botonAceptar">
       <Properties>
