--- a/Gestion Tipo Campo/src/gestiontipocampo/frameComandos.form
+++ b/Gestion Tipo Campo/src/gestiontipocampo/frameComandos.form
@@ -258,12 +258,7 @@
             <Component class="javax.swing.JComboBox" name="comboCampoInicial">
               <Properties>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="4">
-                    <StringItem index="0" value="Item 1"/>
-                    <StringItem index="1" value="Item 2"/>
-                    <StringItem index="2" value="Item 3"/>
-                    <StringItem index="3" value="Item 4"/>
-                  </StringArray>
+                  <StringArray count="0"/>
                 </Property>
                 <Property name="name" type="java.lang.String" value="comboCampoInicial" noResource="true"/>
               </Properties>
@@ -385,12 +380,7 @@
             <Component class="javax.swing.JComboBox" name="comboCampoFinal">
               <Properties>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="4">
-                    <StringItem index="0" value="Item 1"/>
-                    <StringItem index="1" value="Item 2"/>
-                    <StringItem index="2" value="Item 3"/>
-                    <StringItem index="3" value="Item 4"/>
-                  </StringArray>
+                  <StringArray count="0"/>
                 </Property>
                 <Property name="name" type="java.lang.String" value="comboCampoFinal" noResource="true"/>
               </Properties>
