--- a/Gestion Tipo Campo/src/gestiontipocampo/frameComandos.form
+++ b/Gestion Tipo Campo/src/gestiontipocampo/frameComandos.form
@@ -262,6 +262,9 @@
                 </Property>
                 <Property name="name" type="java.lang.String" value="comboCampoInicial" noResource="true"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="comboCampoInicialActionPerformed"/>
+              </Events>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JLayeredPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JLayeredPaneSupportLayout$JLayeredPaneConstraintsDescription">
                   <JLayeredPaneConstraints x="10" y="50" width="130" height="-1" layer="0" position="-1"/>
@@ -450,6 +453,9 @@
                 </Property>
                 <Property name="name" type="java.lang.String" value="comboSeleccionFormulario" noResource="true"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="comboSeleccionFormularioActionPerformed"/>
+              </Events>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JLayeredPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JLayeredPaneSupportLayout$JLayeredPaneConstraintsDescription">
                   <JLayeredPaneConstraints x="10" y="30" width="180" height="-1" layer="0" position="-1"/>
