--- a/Gestion Tipo Campo/src/gestiontipocampo/frameComandos.form
+++ b/Gestion Tipo Campo/src/gestiontipocampo/frameComandos.form
@@ -8,6 +8,9 @@
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
   </SyntheticProperties>
+  <Events>
+    <EventHandler event="componentShown" listener="java.awt.event.ComponentListener" parameters="java.awt.event.ComponentEvent" handler="formComponentShown"/>
+  </Events>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="2"/>
     <AuxValue name="FormSettings_autoSetComponentName" type="java.lang.Boolean" value="true"/>
@@ -23,54 +26,71 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" attributes="0">
-              <EmptySpace max="-2" attributes="0"/>
+          <Group type="102" alignment="0" attributes="0">
+              <EmptySpace min="-2" pref="43" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="labelSeleccionFormulario" alignment="0" min="-2" pref="180" max="-2" attributes="0"/>
-                  <Component id="comboSeleccionFormulario" alignment="0" min="-2" pref="180" max="-2" attributes="0"/>
-                  <Group type="102" attributes="0">
-                      <Component id="labelCampoInicial" min="-2" pref="100" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="210" max="-2" attributes="0"/>
+                  <Group type="102" alignment="0" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="fieldAccion" alignment="0" min="-2" pref="150" max="-2" attributes="0"/>
+                          <Component id="labelCondicionInicial" alignment="0" min="-2" pref="80" max="-2" attributes="0"/>
+                          <Component id="labelCampoInicial" alignment="0" min="-2" pref="100" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace min="-2" pref="160" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="labelCondFinal" min="-2" pref="100" max="-2" attributes="0"/>
                           <Component id="labelCampoFinal" min="-2" pref="100" max="-2" attributes="0"/>
-                          <Component id="labelCondFinal" alignment="0" min="-2" pref="100" max="-2" attributes="0"/>
                           <Component id="comboCampoFinal" alignment="0" min="-2" pref="130" max="-2" attributes="0"/>
                           <Component id="fieldEfecto" alignment="0" min="-2" pref="150" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <Component id="labelCondicionInicial" alignment="0" min="-2" pref="80" max="-2" attributes="0"/>
                   <Component id="comboCampoInicial" alignment="0" min="-2" pref="130" max="-2" attributes="0"/>
-                  <Component id="fieldAccion" alignment="0" min="-2" pref="150" max="-2" attributes="0"/>
-                  <Group type="102" alignment="0" attributes="0">
+              </Group>
+              <EmptySpace pref="206" max="32767" attributes="0"/>
+          </Group>
+          <Group type="102" alignment="0" attributes="0">
+              <EmptySpace max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="labelNombre" min="-2" max="-2" attributes="1"/>
-                          <Component id="fieldNombre" alignment="0" min="-2" pref="179" max="-2" attributes="1"/>
-                      </Group>
-                      <EmptySpace min="-2" pref="45" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="botonAgregarAccion" alignment="0" min="-2" pref="110" max="-2" attributes="0"/>
-                          <Group type="102" alignment="0" attributes="0">
+                          <Group type="102" attributes="0">
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="labelTipo" min="-2" max="-2" attributes="0"/>
-                                  <Component id="comboTipo" min="-2" pref="145" max="-2" attributes="0"/>
+                                  <Component id="labelNombre" alignment="0" min="-2" max="-2" attributes="1"/>
+                                  <Component id="fieldNombre" alignment="0" min="-2" pref="179" max="-2" attributes="1"/>
                               </Group>
-                              <EmptySpace min="-2" pref="57" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="45" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="labelDescripcion" min="-2" max="-2" attributes="0"/>
-                                  <Component id="fieldDescripcion" alignment="0" min="-2" pref="205" max="-2" attributes="0"/>
+                                  <Component id="comboTipo" alignment="0" min="-2" pref="145" max="-2" attributes="0"/>
+                                  <Component id="labelTipo" alignment="0" min="-2" max="-2" attributes="0"/>
                               </Group>
                           </Group>
+                          <Component id="labelSeleccionFormulario" alignment="0" min="-2" pref="180" max="-2" attributes="0"/>
                       </Group>
+                      <EmptySpace min="-2" pref="57" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="fieldDescripcion" alignment="0" min="-2" pref="205" max="-2" attributes="0"/>
+                          <Component id="labelDescripcion" alignment="0" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace pref="68" max="32767" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="1" attributes="0">
+                      <Component id="botonAceptar" min="-2" pref="109" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="60" max="-2" attributes="0"/>
+                      <Component id="botonCancelar" min="-2" pref="109" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="67" max="-2" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="67" max="-2" attributes="0"/>
+                      <Component id="jButton1" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="98" max="-2" attributes="0"/>
+                      <Component id="botonAgregarAccion" min="-2" pref="110" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace max="32767" attributes="0"/>
           </Group>
-          <Group type="102" alignment="1" attributes="0">
-              <EmptySpace pref="306" max="32767" attributes="0"/>
-              <Component id="botonAceptar" min="-2" pref="109" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="60" max="-2" attributes="0"/>
-              <Component id="botonCancelar" min="-2" pref="109" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="67" max="-2" attributes="0"/>
+          <Group type="102" alignment="0" attributes="0">
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="comboSeleccionFormulario" min="-2" pref="180" max="-2" attributes="0"/>
+              <EmptySpace pref="519" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -79,52 +99,58 @@
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="labelNombre" min="-2" max="-2" attributes="0"/>
+                  <Group type="102" attributes="0">
+                      <Component id="labelNombre" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="fieldNombre" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
+                      <Component id="labelSeleccionFormulario" min="-2" max="-2" attributes="0"/>
+                  </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="labelTipo" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="labelDescripcion" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="12" max="32767" attributes="0"/>
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="fieldDescripcion" alignment="3" min="-2" pref="54" max="-2" attributes="0"/>
-                          <Component id="comboTipo" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="fieldNombre" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="fieldDescripcion" min="-2" pref="54" max="-2" attributes="0"/>
+                          <Component id="comboTipo" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="labelSeleccionFormulario" min="-2" max="-2" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
               <Component id="comboSeleccionFormulario" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="labelCondicionInicial" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="labelCondFinal" alignment="3" min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="59" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="1" attributes="0">
+                  <Component id="labelCampoFinal" min="-2" max="-2" attributes="0"/>
+                  <Component id="labelCampoInicial" alignment="1" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="labelCampoInicial" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="labelCampoFinal" alignment="3" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="comboCampoInicial" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="comboCampoFinal" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="fieldAccion" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="fieldEfecto" alignment="3" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="1" attributes="0">
+                  <Component id="labelCondFinal" min="-2" max="-2" attributes="0"/>
+                  <Component id="labelCondicionInicial" alignment="1" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="57" max="-2" attributes="0"/>
-              <Component id="botonAgregarAccion" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="96" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="fieldEfecto" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Component id="fieldAccion" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace min="-2" pref="78" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="botonAgregarAccion" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jButton1" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace min="-2" pref="72" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="botonAceptar" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="botonCancelar" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="58" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="91" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -232,6 +258,9 @@
         <Property name="text" type="java.lang.String" resourceKey="labelCampoInicial.text"/>
         <Property name="name" type="java.lang.String" value="labelCampoInicial" noResource="true"/>
       </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="labelCampoInicialMouseClicked"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JComboBox" name="comboCampoInicial">
       <Properties>
@@ -286,6 +315,18 @@
         <Property name="text" type="java.lang.String" resourceKey="botonAgregarAccion.text"/>
         <Property name="name" type="java.lang.String" value="botonAgregarAccion" noResource="true"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botonAgregarAccionActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="jButton1">
+      <Properties>
+        <Property name="text" type="java.lang.String" resourceKey="jButton1.text"/>
+        <Property name="name" type="java.lang.String" value="jButton1" noResource="true"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
